--- a/custom.scss
+++ b/custom.scss
@@ -35,6 +35,7 @@ $radius: 5px;
 * {
   // font-family: Inter ;
   font-family: Inter, 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-weight: 400;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -125,13 +126,14 @@ p {
 
 
 .ads-container {
-  width: 100%;
+  width: 600px;
+  min-height: 425px;
+  margin: 0 auto;
   display: flex;
   flex-direction: column;
   background-color: $color-test;
   color: $color-light;
   row-gap: 1rem;
-  min-height: 425px;
   overflow-x: hidden;
 
   .top {
@@ -274,13 +276,15 @@ p {
 
 
 .pas-container {
+  width: 600px;
+  min-height: 425px;
+  margin: 0 auto;
   display: flex;
   flex-direction: column;
   background-color: $color-control;
   row-gap: 1.3rem;
   color: #FFFFFF;
   transition: .5s ease;
-  min-height: 425px;
 
   .top {
     display: flex;
@@ -501,7 +505,6 @@ p {
   border-radius: $radius;
   display: flex;
   flex-direction: column;
-  column-gap: 1rem;
   padding: 1rem;
 
   &.all {
@@ -570,7 +573,6 @@ p {
   .bottom {
     display: flex;
     flex-direction: column;
-    column-gap: 0.5rem;
 
     .title {
       font-size: 1rem;
@@ -1093,23 +1095,248 @@ background: #f2f2f2;;
 // Small Screens ================================================================
 @media only screen and (max-width: 768px) {
 
+  // Home -------------------------------------------------
   .ads-container {
+    width: 300px;
+    min-height: 325px;
+    margin: 0 auto;
+    row-gap: 0.6rem;
+
+    .top {
+      margin: 0 auto;
+      .icon-container {
+        display: none;
+      }
+    }
+
     .middle {
+      .left {
+        row-gap: 0.6rem;
+        
+        .qt {
+          font-size: 0.7rem;
+        }
+
+        ul {
+          li {
+            .text {
+              font-size: 0.7rem;
+            }
+          }
+        }
+
+        .price-color {
+          column-gap: 0.9rem;
+
+          .price {
+            height: 1.5rem;
+            padding: 0.5rem;
+
+            p {
+              margin: 0;
+              font-size: 0.8rem;
+              letter-spacing: 1px;
+            }
+          }
+
+          .shoe-color {
+            column-gap: 0.6rem;
+
+            .circle {
+              width: 0.9rem;
+              height: 0.9rem;
+
+              .middle-color {
+                width: 0.4rem;
+                height: 0.4rem;
+              }
+            }
+          }
+        }
+      }
+      
       .right {
         .image {
-          width: 12rem;
-          height: 13rem;
+          width: 10rem;
+          height: 11rem;
         }
+      }
+    }
+
+    .bottom {
+      column-gap: 1rem;
+
+      p {
+        font-size: 0.8rem;
+      }
+    }
+  }
+
+  .pas-container {
+    width: 300px;
+    min-height: 350px;
+    row-gap: 1rem;
+
+    .top {
+      .icon-container {
+        width: 2.5rem;
+        height: 2.5rem;
+
+        i {
+          font-size: 1.5rem;
+          padding-top: 0;
+        }
+      }
+
+      .description {
+        row-gap: 0.8rem;
+
+        .top {
+          font-size: 0.9rem;
+        }
+        .major {
+          font-weight: 400;
+        }
+        .minor {
+          font-size: 0.7rem;
+        }
+
+        .container {
+          .major-line {
+            font-size: 0.9rem;
+          }
+        }
+      }
+    }
+
+    .bottom {
+      column-gap: 0.5rem;
+      margin-top: 0.2rem;
+      justify-content: space-between;
+
+      p {
+        font-size: 0.9rem;
+      }
+
+      a {
+        font-size: 0.9rem;
       }
     }
   }
   
+
+  // Metric Page ------------------------------------------
   .mt-conversion-container {
     margin: 0 auto;
+    width: 18rem;
+    height: 16rem;
+
+    .top {
+      p {
+        font-size: 1.2rem;
+      }
+
+      .icon-container {
+        width: 3rem;
+        height: 3rem;
+
+        i {
+          font-size: 1rem;
+        }
+      }
+    }
+
+    .middle {
+      h3 {
+        font-size: 2.2rem;
+        letter-spacing: 2px;
+      }
+
+      .percent {
+        margin-left: 1rem;
+        margin-bottom: 0.8rem;
+        font-size: 1rem;
+        letter-spacing: 1px;
+      }
+    }
+
+    .bottom {
+      .title {
+        font-size: 0.8rem;
+      }
+
+      .bar-text {
+        font-size: 1.1rem;
+        letter-spacing: 1px;
+      }
+    }
+  }
+
+  // Test Page --------------------------------------------
+  .mean {
+    width: 18rem;
+    row-gap: 1.6rem;
+
+    .ab-row {
+      .icon-container {
+        width: 3rem;
+        height: 3rem;
+
+        i {
+          font-size: 1.7rem !important;
+        }
+      }
+
+      .values {
+        p {
+          span {
+            font-size: 1rem;
+            font-weight: 600;
+          }
+        }
+      }
+    }
   }
 
   .t-test {
+    width: 18rem;
+    height: 100%;
     margin: 0 auto;
+
+    .tt-row {
+      column-gap: 0.8rem;
+      padding: 1.2rem;
+
+      .title {
+        p {
+          font-size: 1.2rem;
+        }
+      }
+
+      .value {
+        p {
+          font-size: 1.3rem;
+        }
+      }
+    }
+  }
+
+  .recommendation  {
+    width: 17rem;
+    .header {
+      column-gap: 0.8rem;
+
+      .icon-container {
+        width: 1.5rem;
+        height: 1.5rem;
+        padding: 0.2rem;
+        margin-bottom: 1rem;
+
+        i {
+          font-size: 0.7rem;
+        }
+      }
+    }
   }
 
   .page-link-container {
