--- a/custom.scss
+++ b/custom.scss
@@ -34,7 +34,7 @@ $radius: 5px;
 
 * {
   // font-family: Inter ;
-  font-family: Inter, 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-family: 'Segoe UI', Inter, Tahoma, Geneva, Verdana, sans-serif;
   font-weight: 400;
 }
 
@@ -44,7 +44,7 @@ h1, h2, h3, h4, h5, h6 {
 
 p {
   margin: 0;
-  font-family: Inter, 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-family: 'Segoe UI', Inter, Tahoma, Geneva, Verdana, sans-serif;
 }
   
 // #quarto-content {
